--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -11,6 +11,7 @@
 @import "./components/badges.css";
 @import "./components/buttons.css";
 @import "./components/dropdowns.css";
+@import "./components/empty-states.css";
 @import "./components/inputs.css";
 @import "./components/overlays.css";
 /* Overrides */
@@ -23,4 +24,5 @@
 @import "./tokens/typography.css";
 /* Utilities */
 @import "./utilities/display.css";
+@import "./utilities/focus.css";
 @import "./utilities/motion.css";
