--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -14,6 +14,7 @@
 @import "./components/empty-states.css";
 @import "./components/inputs.css";
 @import "./components/overlays.css";
+@import "./components/tooltips.css";
 /* Overrides */
 @import "./overrides/codemirror.css";
 @import "./overrides/legacy-modals.css";
